tests/NormalTests/paczka1/fuzzy1/74170932.err
Error in line 2: 9FROy64R1I S405 70,3
Error in line 5: Sr7Vh4azC A313 23,4
Error in line 4: 9FROy64R1I A313 57,4
Error in line 18: NryQGfnt S438 5,2
Error in line 21: NryQGfnt A313 10,5
Error in line 24: ElaEl3Gfz A313 83,9
